Fixed vertical alignment of combo box arrow icon

--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -27,7 +27,11 @@
 
   .euiFormControlLayout__iconButton {
     pointer-events: all;
-    top: $euiFormControlPadding - 1px;
+    @include size($euiSize);
+
+    .euiIcon {
+      vertical-align: baseline;
+    }
 
     @at-root {
       .euiFormControlLayout--compressed#{&} {
